INREL-5132: fix spacing, when no tnc applied

--- a/sass/components/coupon/_coupon.scss
+++ b/sass/components/coupon/_coupon.scss
@@ -398,6 +398,7 @@
           text-align: right;
           color: #828282;
           font-size: 12px;
+          min-height: calc(12px * 1.3);
           &-label {
             text-decoration: none;
             letter-spacing: normal;
